--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
 * {padding: 0; margin: 0; list-style: none; text-decoration: none; box-sizing: border-box; font-family: 'Roboto', sans-serif; }
 @import url('https://fonts.googleapis.com/css2?family=Goldman:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;800&display=swap');
-body {background: rgba(15, 75, 128, .9)}
+body {background: #0f4c81}
 
 /*   header da página       */
-.header {width: 100%; text-align: center; text-transform: uppercase; height: 20vh; background: black; color: white; display: flex; align-items: center; justify-content: center; }
+.header {width: 100%; text-align: center; text-transform: uppercase; height: 20vh; background: #000000; color: white; display: flex; align-items: center; justify-content: center; }
 .header h1 {font-family: 'Goldman', cursive; letter-spacing: 0.2rem; font-size: 32px; font-weight: 700;}
 .header img {margin-right: 2rem;}
 
